# ComfyUI-RealProductScene

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  __init__.py  pyproject.toml  requirements.txt
comfyui_nodes/: __init__.py  node_analyze.py  node_composite.py  tensor_io.py
config/: generation.json  product.json  scene.json
handoff-archive/: ai-product-scene-generator｜ComfyUI合成workflow｜接觸陰影｜#1｜2026-07-21_12-06.md  ai-product-scene-generator｜V2通用管線｜#1｜2026-07-21_13-56.md  ai-product-scene-generator｜V2通用管線｜ComfyUI節點包｜#1｜2026-07-21_15-33.md  ai-product-scene-generator｜V2通用管線｜Phase3深度接地｜#1｜2026-07-21_17-06.md  ai-product-scene-generator｜V2通用管線｜Phase4發佈公開repo｜#1｜2026-07-22_12-07.md  ai-product-scene-generator｜V2通用管線｜Phase4發佈｜B3registry上架｜#1｜2026-07-22_13-07.md  ai-product-scene-generator｜V2通用管線｜Phase5品質打磨｜#1｜2026-07-21_17-50.md  ai-product-scene-generator｜V2通用管線｜Phase6自帶背景多後端｜#1｜2026-07-21_22-53.md  ai-product-scene-generator｜V2通用管線｜Phase7GPT場景刷回真產品｜#1｜2026-07-22_11-12.md
plans/: phase1-geometry.md  phase2-depth-detection.md  phase2-product-led-lighting.md  phase3-depth-detection.md  phase4-comfyui-node-pack.md  phase5-quality-polish.md  phase6-byo-background.md  phase7-swap-mode.md
prompts/: negative_prompt.txt  scene_prompt_template.txt
scripts/: align.py  analyze_product_light.py  comfy_client.py  detect_surface.py  generate.py  geometry.py  prompt_builder.py  shadow.py
tests/: test_align.py  test_backend.py  test_detect_surface.py  test_manual_overrides.py  test_shadow.py
workflows/comfyui_api/: bg_generate_api.json  composite_api.json  (+2 more)
(+1 files in other folders)
